--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "description": "Sample module project for course DATX02",
   "version": "0.0.1",
   "license": "MIT",
-  "main": "lib/main.js",
+  "main": "lib/app.js",
   "dependencies": {
     "q": "1.0.x",
     "indexeddbstore": "git://github.com/rymdjs/data-storage.git#master",
-    "peerjs" : "git://github.com/peers/peerjs.git#0.3.7"
+    "peerjs": "git://github.com/peers/peerjs.git#0.3.7",
+    "underscore": "~1.6.0",
+    "backbone": "~1.1.2",
+    "jquery": "~2.1.0"
   },
   "scripts": {
     "test": "gulp test"
