Add gulp-notify for notifications on build errors

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gulp-clean": "~0.2.4",
     "gulp-concat": "~2.1.7",
     "gulp-jshint": "~1.4.0",
-    "jshint-stylish": "~0.1.5"
+    "jshint-stylish": "~0.1.5",
+    "gulp-notify": "~1.0.0-beta"
   }
 }
