--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "gulp-concat": "~2.1.7",
     "gulp-jshint": "~1.4.0",
     "jshint-stylish": "~0.1.5",
-    "gulp-notify": "~1.0.0-beta"
+    "gulp-notify": "~1.0.0-beta",
+    "gulp-sass": "~0.7.1"
   }
 }
