--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "test": "gulp test"
   },
   "devDependencies": {
-    "browserify": "~3.0",
+    "browserify": ">=3.24.9",
     "gulp-util": "~2.2.14",
     "gulp": "~3.5.1",
     "gulp-browserify": "~0.4.2",
