--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "prototype",
-  "description": "Sample module project for course DATX02",
-  "version": "0.0.1",
+  "name": "rymd-prototype",
+  "description": "Simple peer-to-peer filesharing",
+  "version": "0.1.0",
   "license": "MIT",
   "main": "lib/app.js",
   "dependencies": {
-    "rymd": "0.0.x",
-    "dht-client": "0.0.x",
-    "peerjs-connection": "0.0.x",
+    "rymd": "git://github.com/rymdjs/rymd.git#master",
+    "dht-client": "git://github.com:rymdjs/dht-client.git#master",
+    "peerjs-connection": "git://github.com/rymdjs/peerjs-connection.git#master",
     "indexeddbstore": "git://github.com/rymdjs/data-storage.git#master",
     "underscore": "~1.6.0",
     "backbone": "~1.1.2",
