Fix dependency typo in package.json

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "lib/app.js",
   "dependencies": {
     "rymd": "git://github.com/rymdjs/rymd.git#master",
-    "dht-client": "git://github.com:rymdjs/dht-client.git#master",
+    "dht-client": "git://github.com/rymdjs/dht-client.git#master",
     "peerjs-connection": "git://github.com/rymdjs/peerjs-connection.git#master",
     "indexeddbstore": "git://github.com/rymdjs/data-storage.git#master",
     "underscore": "~1.6.0",
